--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
+# Terraform state files
+*.tfstate
+*.tfstate.*
+
+# Terraform lock file (usually committed, but can be ignored)
+# .terraform.lock.hcl
+
+# Terraform cache
+.terraform/
+
+# Sensitive variable files
+terraform.tfvars
+*.auto.tfvars
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Override files
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# CLI configuration files
+.terraformrc
+terraform.rc
+
 CLAUDE.md
