--- a/exoscale/provision-vm-mini/cloud-init.yaml
+++ b/exoscale/provision-vm-mini/cloud-init.yaml
@@ -254,13 +254,30 @@ write_files:
       sudo -u $USER bash -c "pm2 save" || true
       sudo env PATH=$PATH:/usr/bin /usr/lib/node_modules/pm2/bin/pm2 startup systemd -u $USER --hp $HOME || true
 
-      # Get an apiban key and install it
-      if [ -f /usr/local/bin/apiban/config.json ]; then
-          APIBANKEY=$(curl -X POST -u jambonz:1a074994242182a9e0b67eae93978826 -d "{\"client\": \"$INSTANCE_ID\"}" -s https://apiban.org/sponsor/newkey | jq -r '.ApiKey' 2>/dev/null || echo "")
-          if [ -n "$APIBANKEY" ] && [ "$APIBANKEY" != "null" ]; then
+      # Configure APIBan - supports two modes:
+      # 1. Client credentials mode: auto-provision unique key per instance (preferred)
+      # 2. Single key mode: use customer-provided key
+      APIBAN_KEY="${apiban_key}"
+      APIBAN_CLIENT_ID="${apiban_client_id}"
+      APIBAN_CLIENT_SECRET="${apiban_client_secret}"
+
+      if [ -n "$APIBAN_CLIENT_ID" ] && [ -n "$APIBAN_CLIENT_SECRET" ]; then
+          echo "Provisioning APIBan key via client credentials..."
+          APIBANKEY=$(curl -X POST -u "$APIBAN_CLIENT_ID:$APIBAN_CLIENT_SECRET" \
+              -d "{\"client\": \"$INSTANCE_ID\"}" \
+              -s https://apiban.org/sponsor/newkey | jq -r '.ApiKey' 2>/dev/null || echo "")
+          if [ -n "$APIBANKEY" ] && [ "$APIBANKEY" != "null" ] && [ -f /usr/local/bin/apiban/config.json ]; then
               sudo sed -i -e "s/API-KEY-HERE/$APIBANKEY/g" /usr/local/bin/apiban/config.json
               sudo /usr/local/bin/apiban/apiban-client-nftables FULL || true
+          else
+              echo "Failed to provision APIBan key via client credentials"
           fi
+      elif [ -n "$APIBAN_KEY" ] && [ -f /usr/local/bin/apiban/config.json ]; then
+          echo "Configuring APIBan with provided key..."
+          sudo sed -i -e "s/API-KEY-HERE/$APIBAN_KEY/g" /usr/local/bin/apiban/config.json
+          sudo /usr/local/bin/apiban/apiban-client-nftables FULL || true
+      else
+          echo "Skipping APIBan configuration (no credentials provided)"
       fi
 
       echo "jambonz setup complete!"
