--- a/gcp/provision-vm-mini/terraform.tfvars.example
+++ b/gcp/provision-vm-mini/terraform.tfvars.example
@@ -3,13 +3,18 @@
 #
 # Copy this file to terraform.tfvars and fill in the required values
 
-# ------------------------------------------------------------------------------
-# GCP PROJECT CONFIGURATION
-# ------------------------------------------------------------------------------
+# ==============================================================================
+# REQUIRED - You MUST provide values for these variables
+# ==============================================================================
 
-project_id = "your-project-id"
-region     = "us-west1"
-zone       = "us-west1-a"
+project_id = ""  # Your GCP project ID (e.g., "my-gcp-project")
+url_portal = ""  # Your domain name (e.g., "jambonz.example.com")
+region     = ""  # GCP region (e.g., "us-west1", "us-east1", "europe-west1")
+zone       = ""  # GCP zone (e.g., "us-west1-a", "us-east1-b", "europe-west1-c")
+
+# ==============================================================================
+# OPTIONAL - The defaults below work for most deployments but can be edited as needed
+# ==============================================================================
 
 # ------------------------------------------------------------------------------
 # DEPLOYMENT CONFIGURATION
@@ -36,10 +41,10 @@ allowed_sip_cidr = ["0.0.0.0/0"]    # SIP/RTP access
 
 # ------------------------------------------------------------------------------
 # IMAGE CONFIGURATION
-# Run generate-tf.sh to populate this with the correct image self-link
+# Public jambonz images from drachtio-cpaas project
 # ------------------------------------------------------------------------------
 
-mini_image = "projects/YOUR_PROJECT/global/images/jambonz-mini-VERSION"
+mini_image = "projects/drachtio-cpaas/global/images/jambonz-mini-v10-0-4-debian-12-20260204151445"
 
 # ------------------------------------------------------------------------------
 # MACHINE TYPE CONFIGURATION
@@ -61,14 +66,6 @@ disk_size = 100
 
 ssh_user       = "jambonz"
 ssh_public_key = "REPLACE_WITH_YOUR_SSH_PUBLIC_KEY"
-
-# ------------------------------------------------------------------------------
-# JAMBONZ CONFIGURATION
-# ------------------------------------------------------------------------------
-
-# Domain name for the jambonz portal (leave empty to access by IP address)
-# If set, you'll need to create DNS A records pointing to the public IP
-url_portal = "REPLACE_WITH_YOUR_DOMAIN"
 
 # ------------------------------------------------------------------------------
 # APIBAN CONFIGURATION (optional)
