--- a/gcp/provision-vm-mini/terraform.tfvars.example
+++ b/gcp/provision-vm-mini/terraform.tfvars.example
@@ -7,10 +7,23 @@
 # REQUIRED - You MUST provide values for these variables
 # ==============================================================================
 
-project_id = ""  # Your GCP project ID (e.g., "my-gcp-project")
-url_portal = ""  # Your domain name (e.g., "jambonz.example.com")
-region     = ""  # GCP region (e.g., "us-west1", "us-east1", "europe-west1")
-zone       = ""  # GCP zone (e.g., "us-west1-a", "us-east1-b", "europe-west1-c")
+project_id     = ""  # Your GCP project ID (e.g., "my-gcp-project")
+url_portal     = ""  # Your domain name (e.g., "jambonz.example.com")
+region         = ""  # GCP region (e.g., "us-west1", "us-east1", "europe-west1")
+zone           = ""  # GCP zone (e.g., "us-west1-a", "us-east1-b", "europe-west1-c")
+ssh_public_key = ""  # Your SSH public key (e.g., "ssh-rsa AAAAB3Nz... user@host")
+
+# ------------------------------------------------------------------------------
+# APIBAN CONFIGURATION (optional)
+# Get a free key at https://apiban.org/getkey.html
+# ------------------------------------------------------------------------------
+
+# Single key mode (simpler):
+# apiban_key = "YOUR_APIBAN_KEY"
+
+# OR multi-key mode (auto-provisions unique key per instance):
+# apiban_client_id     = "YOUR_CLIENT_ID"
+# apiban_client_secret = "YOUR_CLIENT_SECRET"
 
 # ==============================================================================
 # OPTIONAL - The defaults below work for most deployments but can be edited as needed
@@ -64,17 +77,4 @@ disk_size = 100
 # SSH CONFIGURATION
 # ------------------------------------------------------------------------------
 
-ssh_user       = "jambonz"
-ssh_public_key = "REPLACE_WITH_YOUR_SSH_PUBLIC_KEY"
-
-# ------------------------------------------------------------------------------
-# APIBAN CONFIGURATION (optional)
-# Get a free key at https://apiban.org/getkey.html
-# ------------------------------------------------------------------------------
-
-# Single key mode (simpler):
-# apiban_key = "YOUR_APIBAN_KEY"
-
-# OR multi-key mode (auto-provisions unique key per instance):
-# apiban_client_id     = "YOUR_CLIENT_ID"
-# apiban_client_secret = "YOUR_CLIENT_SECRET"
+ssh_user = "jambonz"
