add support for deploying jambonz on gcp (#3)
* add support for deploying jambonz on gcp

* incorporate image copying into terraform rather that external bash script

* wip

* remove k8s until fully tested

* wip

--- a/gcp/provision-vm-large/terraform.tfvars.example
+++ b/gcp/provision-vm-large/terraform.tfvars.example
@@ -1,4 +1,7 @@
-# Terraform variables for jambonz medium cluster deployment on GCP
+# Example terraform.tfvars for jambonz large cluster deployment on GCP
+# Fully separated architecture: Web, Monitoring, SIP, RTP as individual VMs
+#
+# Copy this file to terraform.tfvars and fill in the required values
 
 # ==============================================================================
 # REQUIRED - You MUST provide values for these variables
@@ -27,7 +30,7 @@ deploy_recording_cluster = true
 # apiban_client_secret = "YOUR_CLIENT_SECRET"
 
 # ==============================================================================
-# OPTIONAL - The defaults below work for most deployments
+# OPTIONAL - The defaults below work for most deployments but can be edited as needed
 # ==============================================================================
 
 # ------------------------------------------------------------------------------
@@ -48,36 +51,53 @@ public_subnet_cidr = "172.20.10.0/24"
 # NETWORK ACCESS CONTROLS
 # ------------------------------------------------------------------------------
 
-allowed_ssh_cidr  = ["0.0.0.0/0"]
-allowed_http_cidr = ["0.0.0.0/0"]
-allowed_sbc_cidr  = ["0.0.0.0/0"]
+# IMPORTANT: Restrict these for production use
+allowed_ssh_cidr  = ["0.0.0.0/0"]    # SSH access - consider restricting to your IP
+allowed_http_cidr = ["0.0.0.0/0"]    # Web/API access
+allowed_sip_cidr  = ["0.0.0.0/0"]    # SIP signaling access
+allowed_rtp_cidr  = ["0.0.0.0/0"]    # RTP media access
 
 # ------------------------------------------------------------------------------
 # IMAGE CONFIGURATION
+# Public jambonz images from drachtio-cpaas project
 # ------------------------------------------------------------------------------
 
-# Public jambonz images from drachtio-cpaas project
+sip_image            = "projects/drachtio-cpaas/global/images/jambonz-sip-v10-0-4-debian-12-20260204151530"
+rtp_image            = "projects/drachtio-cpaas/global/images/jambonz-rtp-v10-0-4-debian-12-20260204151546"
+web_image            = "projects/drachtio-cpaas/global/images/jambonz-web-v10-0-4-debian-12-20260204151622"
+monitoring_image     = "projects/drachtio-cpaas/global/images/jambonz-monitoring-v10-0-4-debian-12-20260204151643"
 feature_server_image = "projects/drachtio-cpaas/global/images/jambonz-fs-v10-0-4-debian-12-20260204151510"
-sbc_image            = "projects/drachtio-cpaas/global/images/jambonz-sip-rtp-v10-0-4-debian-12-20260204151605"
-web_monitoring_image = "projects/drachtio-cpaas/global/images/jambonz-web-monitoring-v10-0-4-debian-12-20260204151711"
 recording_image      = "projects/drachtio-cpaas/global/images/jambonz-recording-v10-0-4-debian-12-20260204152210"
 
 # ------------------------------------------------------------------------------
 # MACHINE TYPE CONFIGURATION
 # ------------------------------------------------------------------------------
 
-sbc_machine_type            = "e2-standard-4"
+sip_machine_type            = "e2-standard-2"
+rtp_machine_type            = "e2-standard-2"
+web_machine_type            = "e2-standard-4"
+monitoring_machine_type     = "e2-standard-4"
 feature_server_machine_type = "e2-standard-4"
-web_monitoring_machine_type = "e2-standard-4"
 recording_machine_type      = "e2-standard-2"
 
-web_monitoring_disk_size = 200
-
 # ------------------------------------------------------------------------------
-# SBC CONFIGURATION
+# DISK SIZE CONFIGURATION
 # ------------------------------------------------------------------------------
 
-sbc_count = 1
+sip_disk_size            = 100
+rtp_disk_size            = 100
+web_disk_size            = 100
+monitoring_disk_size     = 200  # Larger for time-series data
+feature_server_disk_size = 100
+recording_disk_size      = 100
+
+# ------------------------------------------------------------------------------
+# SIP/RTP INSTANCE COUNTS
+# Each SIP and RTP server gets a static public IP
+# ------------------------------------------------------------------------------
+
+sip_count = 1   # Number of SIP servers (1-10)
+rtp_count = 1   # Number of RTP servers (1-10)
 
 # ------------------------------------------------------------------------------
 # MANAGED INSTANCE GROUP CONFIGURATION
@@ -85,13 +105,13 @@ sbc_count = 1
 
 feature_server_target_size  = 1
 feature_server_min_replicas = 1
-feature_server_max_replicas = 3
+feature_server_max_replicas = 8
 
 recording_target_size  = 1
 recording_min_replicas = 1
-recording_max_replicas = 3
+recording_max_replicas = 8
 
-# Graceful scale-in timeout (max 900 seconds / 15 minutes)
+# Graceful scale-in timeout (max 15 minutes)
 scale_in_timeout_seconds = 900
 
 # ------------------------------------------------------------------------------
@@ -107,10 +127,12 @@ ssh_user = "jambonz"
 mysql_tier      = "db-custom-2-4096"
 mysql_disk_size = 20
 
+# Optionally provide a password (leave empty to auto-generate)
+# mysql_password = ""
+
 # ------------------------------------------------------------------------------
-# REDIS CONFIGURATION (Memorystore)
-# No AUTH, no TLS - simple configuration
+# REDIS CONFIGURATION
 # ------------------------------------------------------------------------------
 
 redis_memory_size_gb = 1
-redis_tier           = "BASIC"
+redis_tier           = "BASIC"  # or "STANDARD_HA" for high availability
